@@ -50,6 +50,10 @@
       <name>Guy Allard</name>
     </contributor>
     <contributor>
+      <name>Oren Benjamin</name>
+      <url>https://github.com/oby1</url>
+    </contributor>
+    <contributor>
       <name>Fredrik Borgh</name>
     </contributor>
     <contributor>
