@@ -1498,7 +1498,9 @@ public final class DateTime
      * same millis and chronology.
      * 
      * @return a DateMidnight using the same millis and chronology
+     * @deprecated DateMidnight is deprecated
      */
+    @Deprecated
     public DateMidnight toDateMidnight() {
         return new DateMidnight(getMillis(), getChronology());
     }
